Add containers, header, main section

--- a/index.html
+++ b/index.html
@@ -8,8 +8,43 @@
     <title>Wellness Tracker</title>
   </head>
   <body>
-    <div class="wrapper">
-      
-    </div>
+    <header class="main-header">
+      <div class="container">
+        <nav>
+          <ol>
+            <li>
+              FAVORITES
+            </li>
+            <li>
+              REVIEWS
+            </li>
+            <li>
+              MY SAVED SEARCHES
+            </li>
+          </ol>
+        </nav>
+        <span user>
+          <img class="user-img" src="" alt="">
+          <p>STEPHANIE MAGDIC</p>
+          <a class="arrow-down" href=""></a>
+        </span>
+      </div>
+    </header>
+    <main>
+      <h2 class="near-you">NEAR YOU</h2>
+      <section class="cards container">
+        <article class="card card1">
+        </article>
+        <article class="card card2">2</article>
+        <article class="card card3">3</article>
+        <article class="card card4">4</article>
+        <article class="card card5">5</article>
+        <article class="card card6">6</article>
+        <article class="card card7">7</article>
+        <article class="card card8">8</article>
+        <article class="card card9">9</article>
+      </section>
+    </main>
+    
   </body>
 </html>
