Add first card-top skeleton model

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <header class="main-header">
-      <div class="container">
         <nav>
           <ol>
             <li>
@@ -28,12 +27,18 @@
           <p>STEPHANIE MAGDIC</p>
           <a class="arrow-down" href=""></a>
         </span>
-      </div>
     </header>
-    <main>
+    <main class="container">
       <h2 class="near-you">NEAR YOU</h2>
-      <section class="cards container">
+      <section class="cards">
         <article class="card card1">
+          <div class="card-top img-top-1">
+            <img src="" alt="" class="favorite1 card-top-img">
+            <div class="miles-container">
+              <p class="miles">.5</p>
+              <img src="" alt="" class="miles card-top-img">
+            </div>
+          </div>
         </article>
         <article class="card card2">2</article>
         <article class="card card3">3</article>
