--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Wellness Tracker</title>
+    <title><img src="" alt="">COFFEE LOCATOR STATIC COMP</title>
   </head>
   <body>
     <header class="main-header">
