Add .hide-for-mobile class with a display off none

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
         </nav>
         <span user>
           <img class="user-img" src="" alt="">
-          <p>STEPHANIE MAGDIC</p>
+          <p class="hide-for-mobile">STEPHANIE MAGDIC</p>
           <a class="arrow-down" href=""></a>
         </span>
     </header>
     <main class="container">
-      <h2 class="near-you">NEAR YOU</h2>
+      <h2 class="near-you hide-for-mobile ">NEAR YOU</h2>
       <section class="cards">
         <article class="card card1">
           <div class="card-top img-top-1">
-            <img src="" alt="" class="favorite1 card-top-img">
-            <div class="miles-container">
+            <img src="" alt="" class="favorite1 card-top-img hide-for-mobile ">
+            <div class="miles-container hide-for-mobile ">
               <p class="miles">.5</p>
-              <img src="" alt="" class="miles card-top-img">
+              <img src="" alt="" class="miles card-top-img ">
             </div>
           </div>
         </article>
