Add media query for desktop

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="main-header">
-        <nav>
+        <nav class="hide-for-mobile">
           <ol>
             <li>
               FAVORITES
@@ -22,7 +22,7 @@
             </li>
           </ol>
         </nav>
-        <span user>
+        <span class="user">
           <img class="user-img" src="" alt="">
           <p class="hide-for-mobile">STEPHANIE MAGDIC</p>
           <a class="arrow-down" href=""></a>
