Add model for card bottom

--- a/index.html
+++ b/index.html
@@ -39,6 +39,50 @@
               <img src="" alt="" class="miles card-top-img ">
             </div>
           </div>
+          <!-- card bottom -->
+          <div class="card-bottom img-top-2">
+            <div class="details">
+              <div class="name-and-hours">
+                <h3>
+                  OTIS COFFEE
+                </h3>
+                <p>Opens 9 AM</p>
+              </div>
+              <div class="shop-features">
+                <span>
+                  <img src="" alt="">
+                  <p>WIFI</p>
+                </span>
+                <span>
+                  <img src="" alt="">
+                  <p>DINE-IN</p>
+                </span>
+                <span>
+                  <img src="" alt="">
+                  <p>SEATING</p>
+                </span>
+              </div>
+            </div>
+            <div class="address-container">
+              ADDRESS
+            </div>
+            <div class="rating-container">
+              <p>
+                RATING
+              </p>
+              <span class="num-rating-container">
+                <p class="number-rating">4.5</p>
+                <span class="star-container">
+                  <img src="" alt="">
+                  <img src="" alt="">
+                  <img src="" alt="">
+                  <img src="" alt="">
+                  <img src="" alt="">
+                </span>
+              </span>
+            </div>
+          </div>
+          <!-- card bottom ends above -->
         </article>
         <article class="card card2">2</article>
         <article class="card card3">3</article>
