Add hide for mobile class to elements on card bottom that should not display for small screen size

--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
             </div>
           </div>
           <!-- card bottom -->
-          <div class="card-bottom img-top-2">
-            <div class="details">
-              <div class="name-and-hours">
+          <div class="card-bottom">
+
+
+            <div class="details mobile-details">
+              <div class="name-and-hours hide-for-mobile">
                 <h3>
                   OTIS COFFEE
                 </h3>
@@ -51,19 +53,21 @@
               <div class="shop-features">
                 <span>
                   <img src="" alt="">
-                  <p>WIFI</p>
+                  <p class="hide-for-mobile">WIFI</p>
                 </span>
                 <span>
                   <img src="" alt="">
-                  <p>DINE-IN</p>
+                  <p class="hide-for-mobile">DINE-IN</p>
                 </span>
                 <span>
                   <img src="" alt="">
-                  <p>SEATING</p>
+                  <p class="hide-for-mobile">SEATING</p>
                 </span>
               </div>
             </div>
-            <div class="address-container">
+
+
+            <div class="address-container hide-for-mobile">
               ADDRESS
             </div>
             <div class="rating-container">
@@ -71,7 +75,7 @@
                 RATING
               </p>
               <span class="num-rating-container">
-                <p class="number-rating">4.5</p>
+                <p class="number-rating hide-for-mobile">4.5</p>
                 <span class="star-container">
                   <img src="" alt="">
                   <img src="" alt="">
