Change name of card-image class for clarity

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h2 class="near-you hide-for-mobile ">NEAR YOU</h2>
       <section class="cards">
         <article class="card card1">
-          <div class="card-top img-top-1">
+          <div class="card-top card-img-1">
             <img src="" alt="" class="favorite1 card-top-img hide-for-mobile ">
             <div class="miles-container hide-for-mobile ">
               <p class="miles">.5</p>
