Add flex to parent containers in card

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="card-top card-img-1">
             <img src="" alt="" class="favorite1 card-top-img hide-for-mobile ">
             <div class="miles-container hide-for-mobile ">
-              <p class="miles">.5</p>
+              <p class="miles">1.2</p>
               <img src="" alt="" class="miles card-top-img ">
             </div>
           </div>
