Fix size of cards with min-width and fix bug in centering container by targeting main

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
         </span>
     </header>
     <main class="container">
-      <h2 class="near-you hide-for-mobile ">NEAR YOU</h2>
+      <h2 class="near-you hide-for-mobile ">Near you</h2>
       <section class="cards">
         <article class="card card1">
+          <!-- card top -->
           <div class="card-top card-img-1">
             <img src="" alt="" class="favorite1 card-top-img hide-for-mobile ">
             <div class="miles-container hide-for-mobile ">
@@ -41,34 +42,30 @@
           </div>
           <!-- card bottom -->
           <div class="card-bottom">
-
-
-            <div class="details mobile-details">
+            <div class="details-container mobile-details">
               <div class="name-and-hours hide-for-mobile">
-                <h3>
-                  OTIS COFFEE
+                <h3 class="shop-name">
+                  Otis Coffee
                 </h3>
-                <p>Opens 9 AM</p>
+                <p class="hours">Opens 9 AM</p>
               </div>
               <div class="shop-features">
-                <span>
+                <span class="feature">
                   <img src="" alt="">
-                  <p class="hide-for-mobile">WIFI</p>
+                  <p class="feature-p hide-for-mobile">WIFI</p>
                 </span>
-                <span>
+                <span class="feature">
                   <img src="" alt="">
-                  <p class="hide-for-mobile">DINE-IN</p>
+                  <p class="feature-p hide-for-mobile">DINE-IN</p>
                 </span>
-                <span>
+                <span class="feature">
                   <img src="" alt="">
-                  <p class="hide-for-mobile">SEATING</p>
+                  <p class="feature-p hide-for-mobile">SEATING</p>
                 </span>
               </div>
             </div>
-
-
             <div class="address-container hide-for-mobile">
-              ADDRESS
+              <p class="address">400 W South Boulder Rd Ste 1100, Lafayette, CO 80026</p>
             </div>
             <div class="rating-container">
               <p>
@@ -95,7 +92,6 @@
         <article class="card card6">6</article>
         <article class="card card7">7</article>
         <article class="card card8">8</article>
-        <article class="card card9">9</article>
       </section>
     </main>
     
