Add margin to card contents

--- a/index.html
+++ b/index.html
@@ -42,47 +42,52 @@
           </div>
           <!-- card bottom -->
           <div class="card-bottom">
-            <div class="details-container mobile-details">
-              <div class="name-and-hours hide-for-mobile">
-                <h3 class="shop-name">
-                  Otis Coffee
-                </h3>
-                <p class="hours">Opens 9 AM</p>
+            <!-- <div class="bottom-contents"> -->
+              <div class="details-container mobile-details">
+                <div class="name-and-hours hide-for-mobile">
+                  <h3 class="shop-name">
+                    Otis Coffee
+                  </h3>
+                  <p class="hours">Opens 9 AM</p>
+                </div>
+                <div class="shop-features">
+                  <span class="feature">
+                    <img src="" alt="">
+                    <p class="feature-p hide-for-mobile">WIFI</p>
+                  </span>
+                  <span class="feature">
+                    <img src="" alt="">
+                    <p class="feature-p hide-for-mobile">DINE-IN</p>
+                  </span>
+                  <span class="feature">
+                    <img src="" alt="">
+                    <p class="feature-p hide-for-mobile">SEATING</p>
+                  </span>
+                </div>
               </div>
-              <div class="shop-features">
-                <span class="feature">
-                  <img src="" alt="">
-                  <p class="feature-p hide-for-mobile">WIFI</p>
-                </span>
-                <span class="feature">
-                  <img src="" alt="">
-                  <p class="feature-p hide-for-mobile">DINE-IN</p>
-                </span>
-                <span class="feature">
-                  <img src="" alt="">
-                  <p class="feature-p hide-for-mobile">SEATING</p>
+              <div class="address-container hide-for-mobile">
+                <p class="address">400 W South Boulder Rd Ste 1100, Lafayette, CO 80026</p>
+              </div>
+              <div class="rating-container">
+                <p>
+                  RATING
+                </p>
+                <span class="num-rating-container">
+                  <p class="number-rating hide-for-mobile">4.5</p>
+                  <span class="star-container">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                    <img src="" alt="">
+                  </span>
                 </span>
               </div>
-            </div>
-            <div class="address-container hide-for-mobile">
-              <p class="address">400 W South Boulder Rd Ste 1100, Lafayette, CO 80026</p>
-            </div>
-            <div class="rating-container">
-              <p>
-                RATING
-              </p>
-              <span class="num-rating-container">
-                <p class="number-rating hide-for-mobile">4.5</p>
-                <span class="star-container">
-                  <img src="" alt="">
-                  <img src="" alt="">
-                  <img src="" alt="">
-                  <img src="" alt="">
-                  <img src="" alt="">
-                </span>
-              </span>
-            </div>
+            <!-- </div> -->
           </div>
+            
+
+
           <!-- card bottom ends above -->
         </article>
         <article class="card card2">2</article>
