Add sytling to nav bar

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </li>
           </ol>
         </nav>
-        <span class="user">
+        <span class="login user">
           <img class="user-img" src="" alt="">
           <p class="hide-for-mobile">STEPHANIE MAGDIC</p>
           <a class="arrow-down" href=""></a>
