Add background images

--- a/index.html
+++ b/index.html
@@ -12,19 +12,22 @@
         <nav class="hide-for-mobile">
           <ol>
             <li>
+              <img src="./assets/heart-black.png" alt="black heart">
               FAVORITES
             </li>
             <li>
+              <img src="./assets/review.png" alt="">
               REVIEWS
             </li>
             <li>
+              <img src="./assets/saved-bookmark.png"" alt="">
               MY SAVED SEARCHES
             </li>
           </ol>
         </nav>
         <span class="login user">
-          <img class="user-img" src="" alt="">
-          <p class="hide-for-mobile">STEPHANIE MAGDIC</p>
+          <img class="user-img" src="./assets/icons8-user-60.png" alt="user-login">
+          <p class="user-name hide-for-mobile">STEPHANIE MAGDIC</p>
           <a class="arrow-down" href=""></a>
         </span>
     </header>
@@ -34,10 +37,10 @@
         <article class="card card1">
           <!-- card top -->
           <div class="card-top card-img-1">
-            <img src="" alt="" class="favorite1 card-top-img hide-for-mobile ">
+            <!-- <img src="" alt="" class="favorite1 card-top-img hide-for-mobile "> -->
             <div class="miles-container hide-for-mobile ">
               <p class="miles">1.2</p>
-              <img src="" alt="" class="miles card-top-img ">
+              <!-- <img src="" alt="" class="miles card-top-img "> -->
             </div>
           </div>
           <!-- card bottom -->
@@ -52,15 +55,15 @@
                 </div>
                 <div class="shop-features">
                   <span class="feature">
-                    <img src="" alt="">
+                    <img class="feature-img" src="./assets/wifi-line.png" alt="">
                     <p class="feature-p hide-for-mobile">WIFI</p>
                   </span>
                   <span class="feature">
-                    <img src="" alt="">
+                    <img class="feature-img" src="./assets/meal-food.png" alt="fork and spoon">
                     <p class="feature-p hide-for-mobile">DINE-IN</p>
                   </span>
                   <span class="feature">
-                    <img src="" alt="">
+                    <img class="feature-img" src="./assets/wood-chair.png" alt="chair">
                     <p class="feature-p hide-for-mobile">SEATING</p>
                   </span>
                 </div>
@@ -75,11 +78,11 @@
                 <span class="num-rating-container">
                   <p class="number-rating hide-for-mobile">4.5</p>
                   <span class="star-container">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
+                    <img src="./assets/black-star.png" alt="black star">
+                    <img src="./assets/black-star.png" alt="black star">
+                    <img src="./assets/black-star.png" alt="black star">
+                    <img src="./assets/black-star.png" alt="black star">
+                    <img src="./assets/star-half.png" alt="half black half white star">
                   </span>
                 </span>
               </div>
