Add containers and display flex to header containers and positioned to match wireframes

--- a/index.html
+++ b/index.html
@@ -25,11 +25,17 @@
             </li>
           </ol>
         </nav>
-        <span class="login user">
-          <img class="user-img" src="./assets/icons8-user-60.png" alt="user-login">
-          <p class="user-name hide-for-mobile">STEPHANIE MAGDIC</p>
-          <a class="arrow-down" href=""></a>
-        </span>
+        <div class="right-side-header">
+          <span class="login user">
+            <img class="user-img" src="./assets/icons8-user-60.png" alt="user-login">
+            <p class="user-name hide-for-mobile">STEPHANIE MAGDIC</p>
+            <a class="arrow-down" href=""></a>
+          </span>
+          <span class="logo-container">
+            <h1 class="name-logo">COFFEEFINDER</h1>
+            <img class="coffee-cup" src="./assets/tea-cup.png" alt="coffee cup">
+          </span>
+        </div>
     </header>
     <main class="container">
       <h2 class="near-you hide-for-mobile ">Near you</h2>
@@ -37,8 +43,9 @@
         <article class="card card1">
           <!-- card top -->
           <div class="card-top card-img-1">
-            <!-- <img src="" alt="" class="favorite1 card-top-img hide-for-mobile "> -->
+            <img src="./assets/heart-black.png" alt="black heart" class="favorite-me hide-for-mobile">
             <div class="miles-container hide-for-mobile ">
+              <p class="miles-label">MILES</p>
               <p class="miles">1.2</p>
               <!-- <img src="" alt="" class="miles card-top-img "> -->
             </div>
