Add current tab near you

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <nav class="hide-for-mobile">
           <ol>
             <li>
+              <img class="nearby-icon" src="./assets/near-you.png"" alt="coffe cup in location pointer">
+              NEAR YOU
+            </li>
+            <li>
               <img src="./assets/heart-black.png" alt="black heart">
               FAVORITES
             </li>
             <li>
               <img src="./assets/review.png" alt="">
               REVIEWS
-            </li>
-            <li>
-              <img src="./assets/saved-bookmark.png"" alt="">
-              MY SAVED SEARCHES
             </li>
           </ol>
         </nav>
@@ -44,7 +44,7 @@
           <!-- card top -->
           <div class="card-top card-img-1">
             <img src="./assets/heart-black.png" alt="black heart" class="favorite-me hide-for-mobile">
-            <div class="miles-container hide-for-mobile ">
+            <div class="miles-container hide-for-mobile">
               <p class="miles-label">MILES</p>
               <p class="miles">1.2</p>
               <!-- <img src="" alt="" class="miles card-top-img "> -->
@@ -79,17 +79,17 @@
                 <p class="address">400 W South Boulder Rd Ste 1100, Lafayette, CO 80026</p>
               </div>
               <div class="rating-container">
-                <p>
+                <p class="rating-label">
                   RATING
                 </p>
                 <span class="num-rating-container">
                   <p class="number-rating hide-for-mobile">4.5</p>
                   <span class="star-container">
-                    <img src="./assets/black-star.png" alt="black star">
-                    <img src="./assets/black-star.png" alt="black star">
-                    <img src="./assets/black-star.png" alt="black star">
-                    <img src="./assets/black-star.png" alt="black star">
-                    <img src="./assets/star-half.png" alt="half black half white star">
+                    <img src="./assets/black-star.png" alt="black star" class="rating-star">
+                    <img src="./assets/black-star.png" alt="black star" class="rating-star">
+                    <img src="./assets/black-star.png" alt="black star" class="rating-star">
+                    <img src="./assets/black-star.png" alt="black star" class="rating-star">
+                    <img src="./assets/star-half.png" alt="half black half white star" class="rating-star">
                   </span>
                 </span>
               </div>
