Fix allignment of icons with text label

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   </head>
   <body>
     <header class="main-header">
-        <nav class="hide-for-mobile">
+        <nav class="nav hide-for-mobile">
           <ol>
-            <li>
-              <img class="nearby-icon" src="./assets/near-you.png"" alt="coffe cup in location pointer">
+            <li class="nearby">
+              <img class="nav-icon" nearby-icon" src="./assets/near-you.png"" alt="coffe cup in location pointer">
               NEAR YOU
             </li>
             <li>
-              <img src="./assets/heart-black.png" alt="black heart">
+              <img class="nav-icon" src="./assets/heart-black.png" alt="black heart">
               FAVORITES
             </li>
             <li>
-              <img src="./assets/review.png" alt="">
+              <img class="nav-icon" src="./assets/review.png" alt="">
               REVIEWS
             </li>
           </ol>
@@ -61,18 +61,18 @@
                   <p class="hours">Opens 9 AM</p>
                 </div>
                 <div class="shop-features">
-                  <span class="feature">
+                  <div class="feature">
                     <img class="feature-img" src="./assets/wifi-line.png" alt="">
                     <p class="feature-p hide-for-mobile">WIFI</p>
-                  </span>
-                  <span class="feature">
+                  </div>
+                  <div class="feature">
                     <img class="feature-img" src="./assets/meal-food.png" alt="fork and spoon">
                     <p class="feature-p hide-for-mobile">DINE-IN</p>
-                  </span>
-                  <span class="feature">
+                  </div>
+                  <div class="feature">
                     <img class="feature-img" src="./assets/wood-chair.png" alt="chair">
                     <p class="feature-p hide-for-mobile">SEATING</p>
-                  </span>
+                  </div>
                 </div>
               </div>
               <div class="address-container hide-for-mobile">
