Fix card top opacity and text

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <header class="main-header">
+      <div class="header-container">
+
         <nav class="nav hide-for-mobile">
           <ol>
             <li class="nearby">
@@ -36,6 +38,8 @@
             <img class="coffee-cup" src="./assets/tea-cup.png" alt="coffee cup">
           </span>
         </div>
+      </div>
+
     </header>
     <main class="container">
       <h2 class="near-you hide-for-mobile ">Near you</h2>
