Fix static only for mobile header

--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
   </head>
   <body>
     <header class="main-header">
-
-      <div class="hide-for-desktop">
-        <span class="header-container-mobile">
+      <!-- Mobile HEADER  -->
+      <div class="mobile-header-container hide-for-desktop">
+        <span class="left-mobile-header-container">
           <h1 class="name-logo">COFFEEFINDER</h1>
           <img class="mobile-user-img" src="./assets/icons8-user-60.png" alt="user">
         </span>
-        <img class="hamburger-collapse" src="./assets/icons8-user-60.png" alt="user">
+        <div class="hamburger-menu"><img class="hamburger-collapse" src="./assets/hamburger-menu.png" alt="user"></div>
       </div>
-
-
-      <div class="header-container">
+      <!-- DESKTOP HEADER -->
+      <div class="header-container hide-for-mobile">
         <nav class="nav hide-for-mobile">
           <ol>
             <li class="nearby">
