Add drop down arrow icon near user login

--- a/index.html
+++ b/index.html
@@ -15,14 +15,16 @@
           <h1 class="name-logo">COFFEEFINDER</h1>
           <img class="mobile-user-img" src="./assets/icons8-user-60.png" alt="user">
         </span>
-        <div class="hamburger-menu"><img class="hamburger-collapse" src="./assets/hamburger-menu.png" alt="user"></div>
+        <div class="hamburger-menu">
+          <img class="hamburger-collapse" src="./assets/hamburger-menu.png" alt="hamburger-menu">
+        </div>
       </div>
       <!-- DESKTOP HEADER -->
       <div class="header-container hide-for-mobile">
-        <nav class="nav hide-for-mobile">
+        <nav class="left-side-header hide-for-mobile">
           <ol>
             <li class="nearby">
-              <img class="nav-icon hide-for-mobile"" nearby-icon" src="./assets/near-you.png"" alt="coffee cup in location pointer">
+              <img class="nav-icon hide-for-mobile nearby-icon" src="./assets/near-you.png"" alt="coffee cup in location pointer">
               NEAR YOU
             </li>
             <li>
@@ -30,7 +32,7 @@
               FAVORITES
             </li>
             <li>
-              <img class="nav-icon" src="./assets/review.png" alt="">
+              <img class="nav-icon" src="./assets/review.png" alt="notebook paper and check mark">
               REVIEWS
             </li>
           </ol>
@@ -39,7 +41,7 @@
           <span class="login user">
             <img class="user-img hide-for-mobile"" src="./assets/icons8-user-60.png" alt="user-login">
             <p class="user-name hide-for-mobile">STEPHANIE MAGDIC</p>
-            <a class="arrow-down" href=""></a>
+            <img class="drop-down-arrow" src="./assets/triangle-bottom-arrow.png" alt="user-login">
           </span>
           <span class="logo-container hide-for-mobile"">
             <h1 class="name-logo">COFFEEFINDER</h1>
