Change coffee shop titles

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <!-- new card starts here-->
         <article class="card card1">
           <div class="shop-title-mobile hide-for-desktop">
-            OTIS COFFEE
+            SINGING BEANS
           </div>
           <!-- card top -->
           <div class="card-top card-img-1 mobile-card-img-size">
@@ -71,7 +71,7 @@
             <div class="details-container mobile-details">
               <div class="name-and-hours hide-for-mobile">
                 <h3 class="shop-name">
-                  Otis Coffee
+                  Singing Beans
                 </h3>
                 <p class="hours">Opens 9 AM</p>
               </div>
@@ -113,7 +113,7 @@
         <!-- new card starts here-->
         <article class="card card2">
           <div class="shop-title-mobile hide-for-desktop">
-            OTIS COFFEE
+            GRIND LIGHT
           </div>
           <!-- card top -->
           <div class="card-top card-img-2 mobile-card-img-size">
@@ -128,7 +128,7 @@
             <div class="details-container mobile-details">
               <div class="name-and-hours hide-for-mobile">
                 <h3 class="shop-name">
-                  Otis Coffee
+                  Grind Light
                 </h3>
                 <p class="hours">Opens 9 AM</p>
               </div>
@@ -170,7 +170,7 @@
         <!-- new card starts here-->
         <article class="card card3">
           <div class="shop-title-mobile hide-for-desktop">
-            OTIS COFFEE
+            ASK ME COFFEE
           </div>
           <!-- card top -->
           <div class="card-top card-img-3 mobile-card-img-size">
@@ -185,7 +185,7 @@
             <div class="details-container mobile-details">
               <div class="name-and-hours hide-for-mobile">
                 <h3 class="shop-name">
-                  Otis Coffee
+                  Ask Me Coffee
                 </h3>
                 <p class="hours">Opens 9 AM</p>
               </div>
@@ -227,7 +227,7 @@
         <!-- new card starts here-->
         <article class="card card4">
           <div class="shop-title-mobile hide-for-desktop">
-            OTIS COFFEE
+            EXCESS SHOT
           </div>
           <!-- card top -->
           <div class="card-top card-img-4 mobile-card-img-size">
@@ -242,7 +242,7 @@
             <div class="details-container mobile-details">
               <div class="name-and-hours hide-for-mobile">
                 <h3 class="shop-name">
-                  Otis Coffee
+                  Excess Shot
                 </h3>
                 <p class="hours">Opens 9 AM</p>
               </div>
@@ -284,7 +284,7 @@
         <!-- new card starts here-->
         <article class="card card5">
           <div class="shop-title-mobile hide-for-desktop">
-            OTIS COFFEE
+            GRIND RUSH
           </div>
           <!-- card top -->
           <div class="card-top card-img-5 mobile-card-img-size">
@@ -299,7 +299,7 @@
             <div class="details-container mobile-details">
               <div class="name-and-hours hide-for-mobile">
                 <h3 class="shop-name">
-                  Otis Coffee
+                  Grind Rush
                 </h3>
                 <p class="hours">Opens 9 AM</p>
               </div>
@@ -341,9 +341,10 @@
         <!-- new card starts here-->
         <article class="card card6">
           <div class="shop-title-mobile hide-for-desktop">
-            OTIS COFFEE
+            WE POUR GOLD
           </div>
           <!-- card top -->
+
           <div class="card-top card-img-6 mobile-card-img-size">
             <img src="./assets/heart-black.png" alt="black heart" class="favorite-me hide-for-mobile">
             <div class="miles-container hide-for-mobile">
@@ -356,7 +357,7 @@
             <div class="details-container mobile-details">
               <div class="name-and-hours hide-for-mobile">
                 <h3 class="shop-name">
-                  Otis Coffee
+                  We Pour Gold
                 </h3>
                 <p class="hours">Opens 9 AM</p>
               </div>
@@ -398,7 +399,7 @@
         <!-- new card starts here-->
         <article class="card card7">
           <div class="shop-title-mobile hide-for-desktop">
-            OTIS COFFEE
+            PLEASE ADD COFFEE
           </div>
           <!-- card top -->
           <div class="card-top card-img-7 mobile-card-img-size">
@@ -413,7 +414,7 @@
             <div class="details-container mobile-details">
               <div class="name-and-hours hide-for-mobile">
                 <h3 class="shop-name">
-                  Otis Coffee
+                  Please Add Coffee
                 </h3>
                 <p class="hours">Opens 9 AM</p>
               </div>
@@ -455,7 +456,7 @@
         <!-- new card starts here-->
         <article class="card card8">
           <div class="shop-title-mobile hide-for-desktop">
-            OTIS COFFEE
+            COOKIE RUN
           </div>
           <!-- card top -->
           <div class="card-top card-img-8 mobile-card-img-size">
@@ -470,7 +471,7 @@
             <div class="details-container mobile-details">
               <div class="name-and-hours hide-for-mobile">
                 <h3 class="shop-name">
-                  Otis Coffee
+                  Cookie Run
                 </h3>
                 <p class="hours">Opens 9 AM</p>
               </div>
