Fix responsive nav bug

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title><img src="./assets/tea-hot.png" alt="">COFFEE LOCATOR STATIC COMP</title>
   </head>
   <body>
-    <header class="main-header">
+    <!-- <header class="main-header"> -->
       <!-- Mobile HEADER  -->
       <div class="mobile-header-container hide-for-desktop">
         <span class="left-mobile-header-container">
@@ -20,6 +20,7 @@
         </div>
       </div>
       <!-- DESKTOP HEADER -->
+    <header class="main-header">
       <div class="header-container hide-for-mobile">
         <nav class="left-side-header hide-for-mobile">
           <ol>
